feat(home/emacs): bind B to heading backlinks in notes map

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1694,6 +1694,7 @@ We set [[help:denote-directory][denote-directory]] early since other parts of my
   (bind-keys ("C-c X" . org-capture)
              :map my/notes-map
              ("b" . denote-backlinks)
+             ("B" . denote-org-extras-backlinks-for-heading)
              ("f" . denote-open-or-create)
              ("l" . denote-link-or-create)
              ("L" . denote-org-extras-link-to-heading)
