feat(home/emacs): basic setup for latex/auctex
Typst was fun, but it's time to get back into LaTeX too 🙃.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2743,6 +2743,14 @@ Common Lisp.
                  '(typescript-ts-mode . biome)))
 #+end_src
 
+** LaTeX
+#+begin_src elisp
+  (after! tex
+    (setopt TeX-engine 'luatex
+            TeX-parse-self t
+            TeX-auto-save t))
+#+end_src
+
 * Applications
 ** Osm.el
 I have [[help:global-visual-line-mode][global-visual-line-mode]] enabled, which breaks stuff inside map buffers, so I undo the breaking stuff.
