--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2744,14 +2744,24 @@ Common Lisp.
 #+end_src
 
 ** LaTeX
+Using AUCTeX with the LuaTeX engine and [[*PDF Tools][PDF Tools]] for viewing.
 #+begin_src elisp
+  (add-hook 'LaTeX-mode-hook #'turn-on-cdlatex)
   (add-hook 'TeX-after-compilation-finished-functions #'TeX-revert-document-buffer)
+
   (after! tex
     (setopt TeX-engine 'luatex
             TeX-parse-self t
             TeX-auto-save t
+            TeX-electric-math '("\\(" . "\\)")
             TeX-view-program-selection '((output-pdf "PDF Tools"))
             TeX-source-correlate-start-server t))
+#+end_src
+
+Unbind =$= from CDLaTeX's map because I want to use [[help:TeX-electric-math][TeX-electric-math]] instead.
+#+begin_src elisp
+  (after! cdlatex
+    (unbind-key "$" cdlatex-mode-map))
 #+end_src
 
 * Applications
