--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2750,11 +2750,13 @@ Using AUCTeX with the LuaTeX engine and [[*PDF Tools][PDF Tools]] for viewing.
   (add-hook 'TeX-after-compilation-finished-functions #'TeX-revert-document-buffer)
 
   (after! tex
+    (TeX-source-correlate-mode)
     (setopt TeX-engine 'luatex
             TeX-parse-self t
             TeX-auto-save t
             TeX-electric-math '("\\(" . "\\)")
             TeX-newline-function #'reindent-then-newline-and-indent
+            TeX-clean-confirm nil
             TeX-view-program-selection '((output-pdf "PDF Tools"))
             TeX-source-correlate-start-server t))
 #+end_src
