--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2218,6 +2218,8 @@ Make Org Mode pretty! Star replacement symbols are taken from [[https://github.c
                                        :foreground ,yellow))))
     (ef-themes-with-colors
       (custom-set-faces
+       '(org-modern-label ((t :height 0.8
+                              :inherit fixed-pitch)))
        `(org-modern-done ((t :inherit org-modern-todo
                              :foreground ,green)))
        '(org-modern-symbol ((t (:family "Iosevka Aile" :height 1.1)))))))
