--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1519,7 +1519,7 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
 
 ** gptel
 #+begin_src elisp
-  (bind-key "C-c A" #'gptel-menu)
+  (bind-key "C-c a" #'gptel-menu)
 
   (add-hook 'gptel-post-stream-hook #'gptel-auto-scroll)
   (add-hook 'gptel-post-response-functions #'gptel-end-of-response)
