--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2766,6 +2766,15 @@ Unbind =$= from CDLaTeX's map because I want to use [[help:TeX-electric-math][Te
     (unbind-key "$" cdlatex-mode-map))
 #+end_src
 
+** Hyprlang
+#+begin_src elisp
+  (autoload #'hyprlang-ts-mode "hyprlang-ts-mode" "A mode for editing Hyprland configuration file." t)
+  (add-to-list 'auto-mode-alist '("/hypr.*\\.conf\\'" . hyprlang-ts-mode))
+
+  (after! hyprlang-ts-mode
+    (setopt hyprlang-ts-mode-indent-offset 4))
+#+end_src
+
 * Applications
 ** Osm.el
 I have [[help:global-visual-line-mode][global-visual-line-mode]] enabled, which breaks stuff inside map buffers, so I undo the breaking stuff.
