--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1504,7 +1504,9 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
 #+begin_src elisp
   (bind-keys ("C-c a" . gptel-menu)
              :map my/buffer-map
-             ("A" . gptel-add))
+             ("A" . gptel-add)
+             :map my/open-map
+             ("g" . gptel))
 
   (add-hook 'gptel-post-stream-hook #'gptel-auto-scroll)
   (add-hook 'gptel-post-response-functions #'gptel-end-of-response)
@@ -1542,9 +1544,9 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
                                            granite3.1-dense:latest))
             gptel-default-mode #'org-mode)
     (setf (alist-get 'org-mode gptel-prompt-prefix-alist)
-          "@me:\n-----\n")
+          "-----\n=@me:=\n")
     (setf (alist-get 'org-mode gptel-response-prefix-alist)
-          "@ai:\n-----\n"))
+          "-----\n=@ai:=\n"))
 #+end_src
 
 #+begin_src elisp
