--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2901,13 +2901,14 @@ Using AUCTeX with the LuaTeX engine and [[*PDF Tools][PDF Tools]] for viewing.
 
   (after! tex
     (TeX-source-correlate-mode)
-    (setopt TeX-engine 'luatex
-            TeX-parse-self t
-            TeX-auto-save t
-            TeX-electric-math '("\\(" . "\\)")
-            TeX-newline-function #'reindent-then-newline-and-indent
-            TeX-clean-confirm nil
-            TeX-view-program-selection '((output-pdf "PDF Tools"))
+    (setopt TeX-engine                        'luatex
+            TeX-parse-self                    t
+            TeX-auto-save                     t
+            TeX-output-dir                    "build"
+            TeX-electric-math                 '("\\(" . "\\)")
+            TeX-newline-function              #'reindent-then-newline-and-indent
+            TeX-clean-confirm                 nil
+            TeX-view-program-selection        '((output-pdf "PDF Tools"))
             TeX-source-correlate-start-server t))
 #+end_src
 
