--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1558,6 +1558,18 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
           "-----\n=@ai:=\n"))
 #+end_src
 
+*** Remove OpenAI models
+By default, gptel defines this variable, which results in OpenAI models being added to the model list. This is pretty annoying when I'm trying to switch models, since I don't use OpenAI's API at all, so this patches them out.
+#+begin_src elisp
+  (el-patch-feature gptel)
+  (el-patch-defvar gptel--openai
+    (el-patch-remove (gptel-make-openai
+                         "ChatGPT"
+                       :key 'gptel-api-key
+                       :stream t
+                       :models gptel--openai-models)))
+#+end_src
+
 *** Tools
 Tools for manipulating the filesystem.
 #+begin_src elisp
