feat(home/emacs): add hyprlang alias to org-babel blocks
Don't ask why I need this 💀.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2943,6 +2943,9 @@ Unbind =$= from CDLaTeX's map because I want to use [[help:TeX-electric-math][Te
   (autoload #'hyprlang-ts-mode "hyprlang-ts-mode" "A mode for editing Hyprland configuration file." t)
   (add-to-list 'auto-mode-alist '("/hypr.*\\.conf\\'" . hyprlang-ts-mode))
 
+  (after! org
+    (push '("hypr" . hyprlang-ts) org-src-lang-modes))
+
   (after! hyprlang-ts-mode
     (setopt hyprlang-ts-mode-indent-offset 4))
 #+end_src
