feat(home/emacs): remove popup-minibuffer behavior
This was super scuffed and problematic in many different cases; preparing to
replace it with a much more robust Vertico-based setup instead.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -414,58 +414,11 @@ Only popup w errors, don't interrupt me for mere warnings.
 #+end_src
 
 ** Minibuffer
-Recursive minibuffers allow usage of the minibuffer when in the minibuffer, "recursing" into layers. Very useful (especially with [[*Vertico][Vertico]]), though disabled by default (probably because it could easily be confusing).
+Recursive minibuffers allow usage of the minibuffer when in the minibuffer, "recursing" into layers. Very useful (especially with [[*Vertico][Vertico]]), though disabled by default (because it could easily be confusing).
 #+begin_src elisp
   (setq enable-recursive-minibuffers t)
   (after! vertico
     (minibuffer-depth-indicate-mode))
-#+end_src
-
-I like using a lot of different frames, since it allows me to take full advantage of tiling window managers. However, this makes the minibuffer annoying to use, since it's limited to the frame size by default. This black magic allows using an entirely separate frame for the minibuffer, activating it dynamically using Hyprland's special workspaces. We manage the frame ourselves instead of using Emacs' built-in ~minibuffer~ frame parameter so that the echo area still stays on each frame.
-#+begin_src elisp
-  (when (daemonp)
-    (setq default-minibuffer-frame (make-frame '((window-system . pgtk)
-                                                 (minibuffer . t)
-                                                 (title . "MINIBUFFER"))))
-    (with-selected-frame default-minibuffer-frame
-      (switch-to-buffer (get-buffer-create " *empty*")))
-    (with-current-buffer " *empty*"
-      (setq-local mode-line-format nil))
-
-    (defsubst my/toggle-minibuffer-workspace ()
-      "Toggle Hyprland's `minibuffer' special workspace."
-      (call-process "hyprctl" nil 0 nil
-                    "--instance" "0"
-                    "dispatch" "togglespecialworkspace" "minibuffer"))
-
-    (defun my/minibuffer-workspace-active-p ()
-      "Return non-nil if the minibuffer Hyprland workspace is currently active."
-      (let* ((json (with-temp-buffer
-                     ;; `hyprctl activeworkspace' ignores special workspaces.
-                     (call-process "hyprctl" nil t nil
-                                   "--instance" "0"
-                                   "activewindow" "-j")
-                     (goto-char (point-min))
-                     (json-parse-buffer :object-type 'alist)))
-             (workspace (map-nested-elt json '(workspace name))))
-        (string= workspace "special:minibuffer")))
-
-    (define-advice completing-read (:around (fn &rest args) use-popup-frame)
-      "Activate a separate minibuffer frame while reading from the minibuffer."
-      (let ((orig-frame (selected-frame)))
-        (unwind-protect
-             (progn
-              (when (zerop (minibuffer-depth))
-                (setq my/minibuffer-selected-window (selected-window)))
-              ;; Could already be active if in a recursive minibuffer.
-              (unless (my/minibuffer-workspace-active-p)
-                (my/toggle-minibuffer-workspace))
-              (select-frame-set-input-focus default-minibuffer-frame)
-              (apply fn args))
-          (when (and (zerop (minibuffer-depth))
-                     (my/minibuffer-workspace-active-p))
-            (my/toggle-minibuffer-workspace)
-            (select-frame-set-input-focus orig-frame))))))
 #+end_src
 
 ** Comint
