feat(home/emacs): custom vertico popup-frame extension

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -919,6 +919,7 @@ Integrates Avy with [[*Embark][Embark]] (taken from [[https://karthinks.com/soft
 
 * Completion
 ** Vertico
+*** Autoload
 Force autoload using ~el-patch~. This also allows delaying the load of [[*Marginalia][Marginalia]].
 #+begin_src elisp
   (autoload #'vertico--advice "vertico")
@@ -953,11 +954,46 @@ Force autoload using ~el-patch~. This also allows delaying the load of [[*Margin
   (vertico-mode)
 #+end_src
 
-Configuration, with ~vertico-quick~, ~vertico-suspend~, ~vertico-repeat~, and ~vertico-directory~ extensions.
+*** Popup Frame
+Custom Vertico display extension that shows the prompt in a new popup frame. Frame display is handled by Hyprland window rules. Based off of the ~vertico-buffer~ extension's code.
+#+begin_src elisp
+  (defvar my/vertico-popup--frame nil
+      "Popup frame currently showing Vertico.")
+
+  (define-minor-mode my/vertico-popup-mode
+    "Display Vertico in a popup frame."
+    :global t)
+
+  (defun my/vertico-popup--delete-frame ()
+    "Delete frame after minibuffer exit."
+    ;; Runs before minibuffer is closed, so depth will still be one on last
+    ;; minibuffer.
+    (when (and (= 1 (minibuffer-depth))
+               my/vertico-popup--frame)
+      (delete-frame my/vertico-popup--frame)
+      (setq my/vertico-popup--frame nil)))
+
+  (defun my/vertico-popup--setup ()
+    "Setup frame display."
+    (unless my/vertico-popup--frame
+      (setq my/vertico-popup--frame
+            (make-frame '((name . "*vertico*")
+                          (minibuffer . only)))))
+    (select-frame-set-input-focus my/vertico-popup--frame)
+    (add-hook 'minibuffer-exit-hook #'my/vertico-popup--delete-frame))
+
+  (after! vertico
+    (cl-defmethod vertico--setup :after (&context (my/vertico-popup-mode (eql t)))
+        (my/vertico-popup--setup)))
+#+end_src
+
+*** Configuration
+Configuration, with ~vertico-quick~, ~vertico-suspend~, ~vertico-repeat~, and ~vertico-directory~ extensions, as well as my own display mode 🙃.
 #+begin_src elisp
   (after! vertico
     (add-hook 'minibuffer-setup-hook #'vertico-repeat-save)
     (add-hook 'rfn-eshadow-update-overlay-hook #'vertico-directory-tidy)
+    (my/vertico-popup-mode)
 
     (bind-keys ("M-S-s" . vertico-suspend)
                ("M-S-r" . vertico-repeat)
@@ -969,7 +1005,7 @@ Configuration, with ~vertico-quick~, ~vertico-suspend~, ~vertico-repeat~, and ~v
                ("M-P" . vertico-repeat-previous)
                ("M-N" . vertico-repeat-next))
 
-    (setopt vertico-count 20
+    (setopt vertico-count 12
             vertico-cycle t
             vertico-resize nil
             vertico-quick1 "arstneio"
