fix(home/emacs): dynamically set vertico-count to use full frame
Since frame height differs based on screen size ¯\_(ツ)_/¯.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -984,7 +984,9 @@ Custom Vertico display extension that shows the prompt in a new popup frame. Fra
 
   (after! vertico
     (cl-defmethod vertico--setup :after (&context (my/vertico-popup-mode (eql t)))
-        (my/vertico-popup--setup)))
+      (my/vertico-popup--setup))
+    (cl-defmethod vertico--resize (&context (my/vertico-popup-mode (eql t)))
+      (setq vertico-count (window-text-height))))
 #+end_src
 
 *** Configuration
@@ -1005,8 +1007,7 @@ Configuration, with ~vertico-quick~, ~vertico-suspend~, ~vertico-repeat~, and ~v
                ("M-P" . vertico-repeat-previous)
                ("M-N" . vertico-repeat-next))
 
-    (setopt vertico-count 12
-            vertico-cycle t
+    (setopt vertico-cycle t
             vertico-resize nil
             vertico-quick1 "arstneio"
             vertico-quick2 vertico-quick1))
