--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -997,8 +997,8 @@ Configuration, with ~vertico-quick~, ~vertico-suspend~, ~vertico-repeat~, and ~v
     (add-hook 'rfn-eshadow-update-overlay-hook #'vertico-directory-tidy)
     (my/vertico-popup-mode)
 
-    (bind-keys ("M-S-s" . vertico-suspend)
-               ("M-S-r" . vertico-repeat)
+    (bind-keys ("M-S" . vertico-suspend)
+               ("M-R" . vertico-repeat)
                :map vertico-map
                ("RET" . vertico-directory-enter)
                ("DEL" . vertico-directory-delete-char)
