feat(home/emacs): repeat map for smartparens

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -363,6 +363,40 @@ For the [[help:sp-with-modes][sp-with-modes]] macro.
       (sp-local-pair "`" "'" :when '(sp-in-string-p sp-in-comment-p))))
 #+end_src
 
+Repeat map for s-exp manipulation.
+#+begin_src elisp
+  (defvar-keymap my/sp-repeat-map
+    :repeat (:continue (negative-argument meow-universal-argument))
+    "f" #'sp-forward-sexp
+    "b" #'sp-backward-sexp
+    "d" #'sp-down-sexp
+    "a" #'sp-backward-down-sexp
+    "D" #'sp-beginning-of-sexp
+    "A" #'sp-end-of-sexp
+    "e" #'sp-up-sexp
+    "u" #'sp-backward-up-sexp
+    "n" #'sp-next-sexp
+    "p" #'sp-previous-sexp
+    "k" #'sp-kill-sexp
+    "w" #'sp-copy-sexp
+    "M-<delete>" #'sp-unwrap-sexp
+    "M-<backspace>" #'sp-backward-unwrap-sexp
+    "<right>" #'sp-forward-slurp-sexp
+    "<left>" #'sp-forward-barf-sexp
+    "M-D" #'sp-splice-sexp
+    "<delete>" #'sp-splice-sexp-killing-forward
+    "S-<backspace>" #'sp-splice-sexp-killing-around
+    "]" #'sp-select-next-thing
+    "SPC" #'sp-mark-sexp
+    "F" #'sp-forward-symbol
+    "B" #'sp-backward-symbol
+    "(" #'sp-wrap-round
+    "[" #'sp-wrap-square
+    "{" #'sp-wrap-curl
+    ";" #'negative-argument
+    "U" #'meow-universal-argument)
+#+end_src
+
 ** Scrolling
 #+begin_src elisp
   (setq-default scroll-conservatively 101
