feat(home/emacs): tweak scroll settings for ultra-scroll
Apparently, setting `scroll-margin` to anything other than 0 automatically makes
scrolling a miserable experience. Which is quite a shame, since I really like
the concept, and particularly enjoyed the similar behavior in Neovim 😐.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -399,12 +399,27 @@ Repeat map for s-exp manipulation.
 
 ** Scrolling
 #+begin_src elisp
-  (setq-default scroll-conservatively 101
-                scroll-margin 4
-                scroll-preserve-screen-position t
-                next-screen-context-lines 4
-                auto-window-vscroll nil
-                fast-but-imprecise-scrolling t)
+  (setq scroll-conservatively 101
+        scroll-margin 0
+        scroll-preserve-screen-position t
+        next-screen-context-lines 4
+        redisplay-skip-fontification-on-input t
+        fast-but-imprecise-scrolling t)
+#+end_src
+
+=ultra-scroll= provides super fast and super smooth pixel-wise scrolling for Emacs, especially with touchpads.
+#+begin_src elisp
+  (add-hook 'my/first-input-hook #'ultra-scroll-mode)
+#+end_src
+
+=ultra-scroll= automatically enables [[help:pixel-scroll-precision-mode][pixel-scroll-precision-mode]], so we might as well use it to make page-wise scrolling smooth.
+#+begin_src elisp
+  (after! pixel-scroll
+    (bind-keys :map pixel-scroll-precision-mode-map
+               ;; For some reason, these are swapped 💀.
+               ([remap scroll-up-command] . pixel-scroll-interpolate-down)
+               ([remap scroll-down-command] . pixel-scroll-interpolate-up))
+    (setq pixel-scroll-precision-interpolate-page t))
 #+end_src
 
 ** Editing
@@ -517,11 +532,6 @@ Deal with various things that don't play nice with this setup.
   (define-advice elisp--company-doc-buffer (:around (fn &rest args) popup-fix)
     (let (display-buffer-base-action)
       (apply fn args)))
-#+end_src
-
-** =ultra-scroll=
-#+begin_src elisp
-  (add-hook 'my/first-input-hook #'ultra-scroll-mode)
 #+end_src
 
 * Appearance
