fix(home/emacs): subtract one from window height for vertico count

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1045,7 +1045,8 @@ Custom Vertico display extension that shows the prompt in a new popup frame. Fra
       ;; which would otherwise get updated information only after the first input
       ;; (since that would trigger redisplay).
       (sit-for 0.01)
-      (setq-local vertico-count (window-text-height)))
+      ;; One line is taken by the prompt.
+      (setq-local vertico-count (1- (window-text-height))))
     (add-hook 'minibuffer-exit-hook #'my/vertico-popup--delete-frame)
     (add-hook 'pre-redisplay-functions #'my/vertico-popup--no-resize))
 
