fix(home/emacs): add transpose command to smartparens repeat map

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -379,6 +379,7 @@ Repeat map for s-exp manipulation.
     "p" #'sp-previous-sexp
     "k" #'sp-kill-sexp
     "w" #'sp-copy-sexp
+    "t" #'sp-transpose-sexp
     "M-<delete>" #'sp-unwrap-sexp
     "M-<backspace>" #'sp-backward-unwrap-sexp
     "<right>" #'sp-forward-slurp-sexp
