--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1771,6 +1771,30 @@ Tools for accessing the Internet.
                   nil :silent :no-cookies))))
 #+end_src
 
+*** Inline Diffs
+Based off code from [[https://github.com/karthink/gptel/wiki/gptel%E2%80%90rewrite-addons#add-inline-diffs-to-gptel-rewrite][here]].
+#+begin_src elisp
+  (after! gptel-rewrite
+    (defun my/gptel-rewrite-inline-diff (&optional ovs)
+      "Start an inline-diff session on OVS."
+      (interactive (list (gptel--rewrite-overlay-at)))
+      (require 'inline-diff)
+      (when-let* ((ov-buf (overlay-buffer (or (car-safe ovs) ovs)))
+                  ((buffer-live-p ov-buf)))
+        (with-current-buffer ov-buf
+          (cl-loop for ov in (ensure-list ovs)
+                   for ov-beg = (overlay-start ov)
+                   for ov-end = (overlay-end ov)
+                   for response = (overlay-get ov 'gptel-rewrite)
+                   do
+                   (delete-overlay ov)
+                   (inline-diff-words
+                    ov-beg ov-end response)))))
+    
+    (bind-key "C-c C-i" #'my/gptel-rewrite-inline-diff
+              gptel-rewrite-actions-map))
+#+end_src
+
 *** gptel-quick
 #+begin_src elisp
   (autoload #'gptel-quick "gptel-quick" "Explain or summarize region or thing at point with an LLM.
