--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -3115,7 +3115,7 @@ Add a function to publish ~geo:~ links as URLs that lead to OpenStreetMap's webs
 
   (after! mu4e
     (bind-key "b" #'mu4e-search-bookmark mu4e-main-mode-map)
-    
+
     (setopt send-mail-function #'sendmail-send-it
             message-confirm-send t
             message-signature 'user-full-name
@@ -3199,6 +3199,18 @@ I have some catch-all aliases set up, so, when replying, I always want to use th
         (message-replace-header "From"
                                 (format "%s <%s>" name email))))
     (add-hook 'mu4e-compose-mode-hook #'my/mu4e-use-to-address))
+#+end_src
+
+Mark messages read upon trashing them (since, if I trashed it, I don't want to be bothered by it anymore). Implementation based on [[help:mu4e-marks][mu4e-marks]].
+#+begin_src elisp
+  (after! mu4e
+    (defun my/mu4e-mark-read-on-trash (mark msg)
+      "Mark MSG read if MARK is trash.
+  Added to `mu4e-mark-execute-pre-hook'."
+      (when (eq mark 'trash)
+        (mu4e--server-move (mu4e-message-field msg :docid)
+                           nil "+S-u-N")))
+    (add-hook 'mu4e-mark-execute-pre-hook #'my/mu4e-mark-read-on-trash))
 #+end_src
 
 ** Eshell
