fix(home/emacs): set buffer to multibyte in gptel fetch tool

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1759,15 +1759,15 @@ Tools for accessing the Internet.
      :function (lambda (callback url)
                  (url-retrieve
                   (concat
-                   "https://urltomarkdown.herokuapp.com/?title=true&links=true&url="
-                   (url-hexify-string url))
+                   "https://urltomarkdown.herokuapp.com/?title=true&links=true&url=" url)
                   (lambda (status)
-                   (goto-char (point-min))
-                   (re-search-forward "\n\n" nil t)
-                   (thread-last
-                     (buffer-substring (point) (point-max))
-                     (string-trim)
-                     (funcall callback)))
+                    (set-buffer-multibyte t)
+                    (goto-char (point-min))
+                    (re-search-forward "\n\n" nil t)
+                    (thread-last
+                      (buffer-substring (point) (point-max))
+                      (string-trim)
+                      (funcall callback)))
                   nil :silent :no-cookies))))
 #+end_src
 
