feat(home/emacs): tweak ollama models
Add vision support, and new models 🙃.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1598,13 +1598,17 @@ Persist undo history; despite the name, this works independently of Undo Fu and 
                 deepseek/deepseek-chat
                 anthropic/claude-3-haiku:beta
                 anthropic/claude-3.5-sonnet:beta))
-    (setopt gptel-model           'granite3.1-dense:latest
+    (setopt gptel-model           'phi4:latest
             gptel-backend         (gptel-make-ollama "Ollama"
                                     :host "windstorm:11434"
-                                    :stream t
-                                    :models '(llama3.1:latest
-                                              granite3.1-dense:latest))
+                                    :stream nil
+                                    :models '(phi4:latest
+                                              llama3.1:latest
+                                              (minicpm-v:latest
+                                               :capabilities (media)
+                                               :mime-types ("image/png"))))
             gptel-default-mode    #'org-mode
+            gptel-track-media     t
             gptel-expert-commands t)
     (setf (alist-get 'org-mode gptel-prompt-prefix-alist)
           "-----\n=@me:=\n")
