feat(home/emacs): set magit-diff-refine-hunk to t
How did I not know about this setting before 😭.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1334,8 +1334,10 @@ Command to enable Direnv for Nix.
   (after! magit
     (setopt magit-save-repository-buffers 'dontask
             magit-display-buffer-function #'magit-display-buffer-same-window-except-diff-v1
-            magit-bind-magit-project-status nil ;; We do this ourselves for lazy-loading
-            magit-clone-default-directory "~/git/"))
+            ;; We do this ourselves for lazy-loading
+            magit-bind-magit-project-status nil
+            magit-clone-default-directory "~/git/"
+            magit-diff-refine-hunk t))
 #+end_src
 
 Start commit buffers in insert mode to type immediately.
