--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -3207,16 +3207,17 @@ I have some catch-all aliases set up, so, when replying, I always want to use th
     (add-hook 'mu4e-compose-mode-hook #'my/mu4e-use-to-address))
 #+end_src
 
-Mark messages read upon trashing them (since, if I trashed it, I don't want to be bothered by it anymore). Implementation based on [[help:mu4e-marks][mu4e-marks]].
+Modify [[help:mu4e-marks][mu4e-marks]] to mark messages read upon trashing them (since, if I trashed it, I don't want to be bothered by it anymore).
 #+begin_src elisp
+  (el-patch-feature mu4e)
   (after! mu4e
-    (defun my/mu4e-mark-read-on-trash (mark msg)
-      "Mark MSG read if MARK is trash.
-  Added to `mu4e-mark-execute-pre-hook'."
-      (when (eq mark 'trash)
-        (mu4e--server-move (mu4e-message-field msg :docid)
-                           nil "+S-u-N")))
-    (add-hook 'mu4e-mark-execute-pre-hook #'my/mu4e-mark-read-on-trash))
+    (el-patch-define-and-eval-template
+     (defconst mu4e-marks)
+     (mu4e--server-move docid
+                        (mu4e--mark-check-target target)
+                        (if mu4e-trash-without-flag
+                            "-N"
+                          (el-patch-swap "+T-N" "+T-N+S-u")))))
 #+end_src
 
 ** Eshell
